# Django_learning

./: .gitmessage.txt
Day1/bookmark/: db.sqlite3  pyproject.toml
Day1/bookmark/bookmark/: views.py
Day1/bookmark/config/: settings.py  urls.py
Day1/bookmark/templates/: book_list.html
blog/: db.sqlite3  pyproject.toml
blog/blog/: admin.py  cb_views.py  fbv_urls.py  forms.py  models.py  urls.py  views.py
blog/blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py  0003_alter_blog_category.py  0004_alter_blog_updated_at_comment.py  0005_alter_comment_options.py  0006_blog_image.py  0007_blog_thumbnail.py
blog/config/: settings.py  urls.py
blog/member/: views.py
blog/templates/: base.html  blog_detail.html  blog_form.html  blog_list.html  form-js.html  pagination.html
blog/templates/registration/: login.html
blog/utils/: models.py
pystagram/: db.sqlite3  pyproject.toml
pystagram/config/: settings.py  urls.py
pystagram/member/: forms.py  models.py  urls.py  views.py
pystagram/member/migrations/: 0001_initial.py  0002_userfollowing_user_following.py  0003_alter_userfollowing_unique_together.py
pystagram/post/: admin.py  comment_urls.py  comment_views.py  forms.py  models.py  views.py
pystagram/post/migrations/: 0001_initial.py  0002_rename_updated_at_post_updated_at_and_more.py  0003_comment_tag.py  0004_like.py
pystagram/static/css/: style.css
pystagram/templates/: base.html
pystagram/templates/auth/: login.html  signup.html  signup_done.html
pystagram/templates/post/: list.html
pystagram/utils/: email.py  models.py
(+66 files in other folders)
