[tool.poetry]
name = "pystagram"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.2"
django-extensions = "^4.1"
ipython = "^9.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
